[metadata]
name = cleaninty
version = 0.1.1
author = Luis Marques
url = https://github.com/luigoalma/cleaninty
description = Python tool to perform some Nintendo console client to server operations
long_description = file: README.md
long_description_content_type = text/markdown
license = Unlicense
classifiers =
    License :: OSI Approved :: The Unlicense (Unlicense)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.7
package_dir =
    = src
packages = find:
install_requires =
    pycurl>=7.45.0
    cryptography>=38.0.0
    defusedxml

[options.entry_points]
console_scripts =
    cleaninty = cleaninty._main:_main
    cleaninty_ctr = cleaninty.ctr._main:_main
    cleaninty_ktr = cleaninty.ctr._main:_main

[options.packages.find]
where = src

[options.package_data]
cleaninty = 
    *.pem
    *.crt
